Refactoring: jacoco für testabdeckung geadded, LogService refactored, Tests für alle backendServices erstellt und angepasst